tests-integration/tests/snapshots/e2e__nested_root__check_before.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "main.rs",
      "status": "missing"
    }
  ]
}
