tests-integration/tests/snapshots/e2e__nested_root__format.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": true,
      "path": "main.rs",
      "status": "missing"
    }
  ]
}
