tests-integration/tests/snapshots/e2e__nested_root__format_idempotent.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "main.rs",
      "status": "clean"
    }
  ]
}
